--- a/UIViewTest/UIViewTest/ViewController/ImageViewController.xib
+++ b/UIViewTest/UIViewTest/ViewController/ImageViewController.xib
@@ -21,14 +21,14 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="UIImageViewテスト" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXO-f4-2G2">
-                    <rect key="frame" x="0.0" y="27" width="600" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UIImageViewテスト" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PXO-f4-2G2">
+                    <rect key="frame" x="0.0" y="27" width="375" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="4" translatesAutoresizingMaskIntoConstraints="NO" id="ZkY-om-caH">
-                    <rect key="frame" x="183" y="519" width="94" height="29"/>
+                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="4" translatesAutoresizingMaskIntoConstraints="NO" id="ZkY-om-caH">
+                    <rect key="frame" x="70.5" y="586" width="94" height="29"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="94" id="LBp-fD-0Yi"/>
                         <constraint firstAttribute="height" constant="29" id="hFU-cZ-WGZ"/>
@@ -37,8 +37,8 @@
                         <action selector="valueChanged:" destination="-1" eventType="valueChanged" id="IAd-7E-p2Y"/>
                     </connections>
                 </stepper>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tIa-Lc-Osu">
-                    <rect key="frame" x="292.5" y="523" width="215" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tIa-Lc-Osu">
+                    <rect key="frame" x="180" y="590" width="215" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="215" id="B73-bL-WHY"/>
                         <constraint firstAttribute="height" constant="21" id="dZZ-Rs-vlg"/>
@@ -47,8 +47,8 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1v2-Ca-wNK">
-                    <rect key="frame" x="69" y="562" width="438.5" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1v2-Ca-wNK">
+                    <rect key="frame" x="-43.5" y="629" width="438.5" height="30"/>
                     <color key="backgroundColor" red="1" green="0.94949494950000002" blue="0.94949494950000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="438.5" id="AB8-Bz-aor"/>
