--- a/NibTest/NibTest/ViewController.xib
+++ b/NibTest/NibTest/ViewController.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController" customModule="NibTest" customModuleProvider="target">
@@ -12,11 +16,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello World" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="850-mH-MHP">
-                    <rect key="frame" x="255.5" y="289" width="89" height="21"/>
+                    <rect key="frame" x="143" y="323" width="89" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="89" id="6P0-rd-2db"/>
                         <constraint firstAttribute="height" constant="21" id="Lxe-2V-1qh"/>
@@ -26,7 +30,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Nf-yV-fvQ">
-                    <rect key="frame" x="277" y="329" width="46" height="30"/>
+                    <rect key="frame" x="164.5" y="363" width="46" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="46" id="HVs-Wz-zv3"/>
                         <constraint firstAttribute="height" constant="30" id="oJc-Qd-q4u"/>
@@ -37,7 +41,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="8Nf-yV-fvQ" firstAttribute="top" secondItem="850-mH-MHP" secondAttribute="bottom" constant="19" id="HPy-q1-aGt"/>
                 <constraint firstItem="850-mH-MHP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="OxD-GF-jjS"/>
