--- a/UIViewTest/UIViewTest/ViewController/AlertViewController.xib
+++ b/UIViewTest/UIViewTest/ViewController/AlertViewController.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AlertViewController" customModule="UIViewTest" customModuleProvider="target">
@@ -12,11 +16,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bzi-36-eM5">
-                    <rect key="frame" x="263" y="45" width="75" height="30"/>
+                    <rect key="frame" x="150" y="45" width="75" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="4vU-h8-NGe"/>
                         <constraint firstAttribute="width" constant="75" id="TNw-2U-z63"/>
@@ -27,7 +31,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mlo-VR-p8y">
-                    <rect key="frame" x="235" y="96" width="130" height="30"/>
+                    <rect key="frame" x="122.5" y="96" width="130" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="oUP-Bd-Dvi"/>
                         <constraint firstAttribute="width" constant="130" id="tdl-08-ef5"/>
@@ -38,7 +42,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="bzi-36-eM5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="45" id="Aih-8R-pfB"/>
                 <constraint firstItem="mlo-VR-p8y" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="E5i-N8-YCg"/>
