--- a/UIViewTest/UIViewTest/TableView/CustomCell.xib
+++ b/UIViewTest/UIViewTest/TableView/CustomCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomCell" customModule="UIViewTest" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="TpW-h4-XN7" customClass="CustomCell" customModule="UIViewTest" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCell" id="TpW-h4-XN7" customClass="CustomCell" customModule="UIViewTest" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TpW-h4-XN7" id="0T8-nb-ZkJ">
@@ -26,6 +26,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="bEm-wK-2xh" firstAttribute="top" secondItem="0T8-nb-ZkJ" secondAttribute="topMargin" id="3cf-UQ-mR0"/>
                     <constraint firstAttribute="bottomMargin" secondItem="bEm-wK-2xh" secondAttribute="bottom" id="E31-7r-ha8"/>
@@ -34,7 +35,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="label1" destination="bEm-wK-2xh" id="aYV-0Z-TfH"/>
+                <outlet property="label1" destination="bEm-wK-2xh" id="I7J-WU-2u4"/>
             </connections>
         </tableViewCell>
     </objects>
