--- a/TestRealm/TestRealm/ViewController4.xib
+++ b/TestRealm/TestRealm/ViewController4.xib
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController4" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController4" customModule="TestRealm" customModuleProvider="target">
             <connections>
+                <outlet property="ageText" destination="Rc1-Nb-8LO" id="vWN-Ej-9bh"/>
+                <outlet property="idText" destination="3wc-QF-MAr" id="MRz-Pl-SPJ"/>
+                <outlet property="nameText" destination="khh-zI-myz" id="IgN-LB-xST"/>
+                <outlet property="textView" destination="ntd-6E-GNH" id="VC6-3a-Dgz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,7 +22,96 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3wc-QF-MAr">
+                    <rect key="frame" x="118" y="80" width="237" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="TxN-jO-LmM"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="khh-zI-myz">
+                    <rect key="frame" x="153" y="127" width="202" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="KHB-Bz-KXh"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brd-xc-mAd">
+                    <rect key="frame" x="89" y="131.5" width="47" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="age:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mct-Dj-ZCc">
+                    <rect key="frame" x="89" y="179" width="33" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rc1-Nb-8LO">
+                    <rect key="frame" x="139" y="179" width="216" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="EcI-1E-WB8"/>
+                    </constraints>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmR-5O-pA3">
+                    <rect key="frame" x="0.0" y="219" width="375" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="cBL-zu-MfH"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                    <state key="normal" title="update"/>
+                    <connections>
+                        <action selector="updateButtonClicked:" destination="-1" eventType="touchUpInside" id="gsF-Rk-iv9"/>
+                    </connections>
+                </button>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ntd-6E-GNH">
+                    <rect key="frame" x="0.0" y="257" width="375" height="410"/>
+                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="id:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gUw-bB-meh">
+                    <rect key="frame" x="89" y="84.5" width="19" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="mmR-5O-pA3" secondAttribute="trailing" id="3pp-Er-0B3"/>
+                <constraint firstAttribute="trailing" secondItem="3wc-QF-MAr" secondAttribute="trailing" constant="20" id="5bN-UK-5e3"/>
+                <constraint firstItem="gUw-bB-meh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="89" id="7hJ-f7-J0A"/>
+                <constraint firstAttribute="trailing" secondItem="ntd-6E-GNH" secondAttribute="trailing" id="97e-aA-Sak"/>
+                <constraint firstAttribute="trailing" secondItem="khh-zI-myz" secondAttribute="trailing" constant="20" id="BK9-s7-Rep"/>
+                <constraint firstAttribute="trailing" secondItem="Rc1-Nb-8LO" secondAttribute="trailing" constant="20" id="CQC-8q-BRg"/>
+                <constraint firstAttribute="bottom" secondItem="ntd-6E-GNH" secondAttribute="bottom" id="Fkv-vt-S1b"/>
+                <constraint firstItem="gUw-bB-meh" firstAttribute="leading" secondItem="brd-xc-mAd" secondAttribute="leading" id="HBD-m3-ZIx"/>
+                <constraint firstItem="ntd-6E-GNH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Imc-ed-NeW"/>
+                <constraint firstItem="mmR-5O-pA3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="JgX-bo-m7c"/>
+                <constraint firstItem="3wc-QF-MAr" firstAttribute="leading" secondItem="gUw-bB-meh" secondAttribute="trailing" constant="10" id="MMe-S9-Rd3"/>
+                <constraint firstItem="3wc-QF-MAr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="PS6-O4-SFR"/>
+                <constraint firstItem="gUw-bB-meh" firstAttribute="leading" secondItem="mct-Dj-ZCc" secondAttribute="leading" id="UT2-ZN-CLJ"/>
+                <constraint firstItem="khh-zI-myz" firstAttribute="top" secondItem="3wc-QF-MAr" secondAttribute="bottom" constant="17" id="V62-vY-N6v"/>
+                <constraint firstItem="mct-Dj-ZCc" firstAttribute="top" secondItem="Rc1-Nb-8LO" secondAttribute="top" id="eJ7-xj-ibD"/>
+                <constraint firstItem="Rc1-Nb-8LO" firstAttribute="top" secondItem="khh-zI-myz" secondAttribute="bottom" constant="22" id="eny-kl-nHR"/>
+                <constraint firstItem="brd-xc-mAd" firstAttribute="top" secondItem="gUw-bB-meh" secondAttribute="bottom" constant="26" id="l2w-xW-Orf"/>
+                <constraint firstItem="gUw-bB-meh" firstAttribute="centerY" secondItem="3wc-QF-MAr" secondAttribute="centerY" id="o5f-4G-dIP"/>
+                <constraint firstItem="khh-zI-myz" firstAttribute="leading" secondItem="brd-xc-mAd" secondAttribute="trailing" constant="17" id="pRo-Ff-fKg"/>
+                <constraint firstItem="Rc1-Nb-8LO" firstAttribute="leading" secondItem="mct-Dj-ZCc" secondAttribute="trailing" constant="17" id="qOA-Cq-buF"/>
+                <constraint firstItem="mmR-5O-pA3" firstAttribute="top" secondItem="Rc1-Nb-8LO" secondAttribute="bottom" constant="10" id="sVR-G2-wZC"/>
+                <constraint firstItem="ntd-6E-GNH" firstAttribute="top" secondItem="mmR-5O-pA3" secondAttribute="bottom" constant="8" id="zyi-s9-QhZ"/>
+            </constraints>
+            <point key="canvasLocation" x="25.5" y="52.5"/>
         </view>
     </objects>
 </document>
