--- a/UIViewTest/UIViewTest/ViewController/ViewController.xib
+++ b/UIViewTest/UIViewTest/ViewController/ViewController.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController" customModule="UIViewTest" customModuleProvider="target">
@@ -15,37 +19,49 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uc1-QV-T5z">
-                    <rect key="frame" x="281" y="434" width="38" height="30"/>
+                    <rect key="frame" x="168.5" y="477" width="38" height="30"/>
                     <state key="normal" title="Move"/>
                     <connections>
                         <action selector="button1Taped:" destination="-1" eventType="touchUpInside" id="ufJ-Kn-eNE"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fh6-VN-kX2">
-                    <rect key="frame" x="257" y="472" width="86" height="30"/>
+                    <rect key="frame" x="144.5" y="515" width="86" height="30"/>
                     <state key="normal" title="Change Size"/>
                     <connections>
                         <action selector="button2Taped:" destination="-1" eventType="touchUpInside" id="qge-te-Z3E"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c8u-sW-q6z">
-                    <rect key="frame" x="281" y="510" width="38" height="30"/>
+                    <rect key="frame" x="168.5" y="553" width="38" height="30"/>
                     <state key="normal" title="Show"/>
                     <connections>
                         <action selector="button3Taped:" destination="-1" eventType="touchUpInside" id="wFa-Hm-0pe"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iWh-vJ-Rd8">
+                    <rect key="frame" x="165" y="591" width="45" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="Om4-JL-7UV"/>
+                    </constraints>
+                    <state key="normal" title="Delete"/>
+                    <connections>
+                        <action selector="button4Taped:" destination="-1" eventType="touchUpInside" id="XeU-Tv-W2d"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="c8u-sW-q6z" firstAttribute="top" secondItem="Fh6-VN-kX2" secondAttribute="bottom" constant="8" symbolic="YES" id="7G9-AV-Eoh"/>
                 <constraint firstItem="c8u-sW-q6z" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="BnW-Mj-Hnq"/>
+                <constraint firstItem="iWh-vJ-Rd8" firstAttribute="top" secondItem="c8u-sW-q6z" secondAttribute="bottom" constant="8" id="BvL-tb-y9p"/>
                 <constraint firstItem="uc1-QV-T5z" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="TSr-Y3-3Zv"/>
-                <constraint firstAttribute="bottom" secondItem="uc1-QV-T5z" secondAttribute="bottom" constant="136" id="XlL-Sv-fHf"/>
+                <constraint firstItem="iWh-vJ-Rd8" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Uee-lw-WwU"/>
+                <constraint firstAttribute="bottom" secondItem="uc1-QV-T5z" secondAttribute="bottom" constant="160" id="XlL-Sv-fHf"/>
                 <constraint firstItem="Fh6-VN-kX2" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="h4K-It-prx"/>
                 <constraint firstItem="Fh6-VN-kX2" firstAttribute="top" secondItem="uc1-QV-T5z" secondAttribute="bottom" constant="8" symbolic="YES" id="mob-Wf-LEV"/>
             </constraints>
